--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,9 @@
 ---
 layout: post-index
 permalink: /articles/
-title: All Posts
+title: Portfolio
 permalink: /archive/index.html
-description: "An archive of posts."
+description: "A collection of my work"
 ---
 
 {% for post in site.posts %}
